opam-version: "2.0"
version: "0.3.1"
maintainer: "Vincent Jacques <vincent@vincent-jacques.net>"
authors: "Vincent Jacques <vincent@vincent-jacques.net>"
license: "MIT"
homepage: "https://jacquev6.github.io/sphinxcontrib-ocaml/"
doc: "https://jacquev6.github.io/sphinxcontrib-ocaml/"
dev-repo: "git+https://github.com/jacquev6/sphinxcontrib-ocaml.git"
bug-reports: "http://github.com/jacquev6/sphinxcontrib-ocaml/issues/"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]
depends: [
  "ocaml" {= "4.05.0"}
  "dune" {build}
  "General" {>= "0.4.0"}
  "yojson"
]
synopsis: "Sphinx extension to document OCaml libraries"
description: """
sphinxcontrib-ocaml is a [Sphinx](http://www.sphinx-doc.org/) (1.6.3+) extension to document OCaml libraries.
It provides a Sphinx domain for OCaml and [autodoc](http://www.sphinx-doc.org/en/stable/ext/autodoc.html)-like
directives to generate documentation from source code."""
